--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.5.0",
     "parcel": "^2.5.0",
+    "stats.js": "^0.17.0",
     "three": "^0.140.2"
   }
 }
